# gestao_rh

./: .gitignore  pyproject.toml
core/: views.py
core/templates/core/: index.html
departamentos/: models.py
documentos/: models.py
empresas/: models.py  urls.py  views.py
funcionarios/: models.py  urls.py  views.py
gestao_rh/: settings.py  urls.py
registro_hora_extra/: models.py
templates/: base.html
