[tool.poetry]
name = "gestao_rh"
version = "0.1.0"
description = ""
authors = ["Willames <williames@arbache.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
